修改start-mcp从.env文件获取相应参数

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ GLM_API_KEY=your_api_key_here
 
 # GLM API基础URL
 GLM_BASE_URL=https://open.bigmodel.cn/api/paas/v4/chat/completions
+
+# Node.js完整路径（可选，如果不设置将自动检测）
+# 例如: node_path=/opt/homebrew/bin/node
+# 或者: node_path=/usr/local/bin/node
+node_path=
+
+# 注意：index.js路径现在由脚本自动计算，无需手动设置
